--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,8 @@
 project:
   type: website
   output-dir: docs
+  resources: 
+    - "assets/resources/CV_Correndo_AUG-28-2022.pdf"
 
 website:
   title: "AdrianCorrendo"
