--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ project:
 website:
   title: "AdrianCorrendo"
   navbar:
-    background: "#312244"
+    background: "#264653"
     left:
       - href: 01-index.qmd
         text: Home
@@ -17,7 +17,9 @@ website:
         text: Publications
       - href: 04-digitalops.qmd
         text: Digital Resources
-      - href: 05-contact.qmd
+      - href: 05-talks.qmd
+        text: Talks
+      - href: contact.qmd
         text: Contact
     right:
       - icon: github
