--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ project:
 website:
   title: "AdrianCorrendo"
   navbar:
-    background: "#899d78"
+    background: "#424874"
     left:
       - href: 01-index.qmd
         text: Home
